--- a/app/src/main/res/layout/activity_mododificil.xml
+++ b/app/src/main/res/layout/activity_mododificil.xml
@@ -44,351 +44,15 @@
                 app:navigationIcon="@mipmap/menu" />
 
             <LinearLayout
-                android:id="@+id/linearLayout2"
+                android:id="@+id/linearLayoutdif"
                 android:layout_width="411dp"
-                android:layout_height="671dp"
+                android:layout_height="580dp"
                 android:layout_marginBottom="56dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar2">
-
-                <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:columnCount="8"
-                    android:columnOrderPreserved="false"
-                    android:foregroundGravity="center"
-                    android:orientation="vertical"
-                    android:rowCount="8"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <Button
-                        android:id="@+id/button1"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button4"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button6"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button7"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button8"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button9"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button10"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button11"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button12"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button13"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button14"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button15"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button17"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button16"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button18"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button19"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button20"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button21"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button22"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button23"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button24"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button25"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button26"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button27"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button28"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button29"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button30"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button31"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button32"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button33"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button34"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button35"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button36"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button37"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button38"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button39"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button40"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button41"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button42"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button43"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button44"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button45"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button46"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button47"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button48"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button49"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button50"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button51"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button52"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button53"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button54"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button55"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button56"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button57"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button58"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button59"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button60"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button61"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button62"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button63"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button64"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content" />
-
-                </GridLayout>
 
                 <TextView
                     android:id="@+id/textViewniveldificil"
@@ -402,9 +66,12 @@
                 <TextView
                     android:id="@+id/textViewtiempodificil"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="119dp"
+                    android:layout_gravity="bottom"
                     android:layout_marginLeft="10pt"
                     android:fontFamily="@font/baloo"
+                    android:foregroundGravity="bottom"
+                    android:gravity="bottom"
                     android:text="@string/niveldificiltiempo"
                     android:textSize="100sp" />
             </LinearLayout>
