--- a/app/src/main/res/layout/activity_modofacil.xml
+++ b/app/src/main/res/layout/activity_modofacil.xml
@@ -37,7 +37,7 @@
                 android:background="#1D1F2B"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="?attr/actionBarTheme"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayoutdif"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
